- Added Olemba Seed to the loot table of Ironspine Petrifier for the quests Olemba Seeds and Olemba Seed Oil.
- Updated the flags of Olemba Seed to allow every member of a group to loot it.

[2023-06-20]
- Updated the flags of Raptor Ribs to allow every member of a group to loot it.
- Updated the flags of Serpent Flesh to allow every member of a group to loot it.

[2023-07-10]
- Added Bundle of Wood to the loot table of Murloc Forager for the quest A Bundle of Trouble.
- Added Bundle of Wood to the loot table of Murloc Lurker for the quest A Bundle of Trouble.
- Updated the flags of Bundle of Wood to allow every member of a group to loot it.

[2023-08-29]
- Updated the flags of Prospector's Pick to allow every member of a group to loot it.

[2023-09-01]
- Updated the restock time of Berard's Bookshelf to prevent having to wait for it.

[2023-09-24]
- Added the script for Tirisfal Glades to make the quest A Rogue's Deal trigger for every member of a group.

[2023-11-14]
- Updated the restock time of Stone of West Binding to prevent having to wait for it.
- Updated the restock time of Stone of Outer Binding to prevent having to wait for it.
- Updated the restock time of Stone of East Binding to prevent having to wait for it.

[2023-12-02]
- Updated the respawn time of Kim'jael's Equipment.

[2024-01-13]
- Updated the script for Khu'nok the Behemoth to give every member of a group credit.

[2024-03-19]
- Added Gordunni Cobalt to the loot table of Gordunni Ogre for the quest Gordunni Cobalt.
- Added Gordunni Cobalt to the loot table of Gordunni Brute for the quest Gordunni Cobalt.
- Added Gordunni Cobalt to the loot table of Gordunni Ogre Mage for the quest Gordunni Cobalt.
- Updated the flags of Gordunni Cobalt to allow every member of a group to loot it.

[2024-04-03]
- Updated the respawn time of Sealed Box.
- Updated the restock time of Sealed Box.

[2024-04-04]
- Updated the restock time of Ikeyen's Belongings.